# noticer

./: .gitignore  pyproject.toml  reminders.db
src/: app.py  bot.py  git_updater.py  reminder.py  reminder_bot.session
